--- a/PhD/Exacto/2022-108/2022_108_DR.Rmd
+++ b/PhD/Exacto/2022-108/2022_108_DR.Rmd
@@ -108,10 +108,9 @@ ED(model.LL3, c(50, 90), type = "relative")
 
 ```{r}
 
-EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none")
+EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
 
-EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none")
-
+EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
 
 
 # Comparing b parameter (slope)
@@ -141,9 +140,11 @@ plot(model.LL3,
      ylab = expression(paste("Dry aboveground biomass (g plant"^-1, ")")),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1,
+     cex = 1.2,
      cex.axis = 1,
-     cex.lab = 2,
+     cex.lab = 1.5,
+     cex.legend = 1.4,
+     legendPos = c(1450, 3.8),
      lwd = 1)
 
 abline(v = 280, 
@@ -151,21 +152,21 @@ abline(v = 280,
        lty = "twodash",
        col = "black")
 
-text(x = 1500, y = 1.5, 
-     labels = expression(paste("ED"[50] ~ "RI = 29.26 ("%+-% "6.63)")),
+text(x = 650, y = 1.2, 
+     labels = expression(paste("ED"[50] ~ "Ratio = 1.4 ("%+-% "0.2)")),
      cex = 1,
      col = "black",
      font = 2)
 
-text(x = 1150, y = 1.35, 
-     labels = expression("p-value = < 0.0001"),
+text(x = 480, y = 1.1, 
+     labels = expression("p-value = 0.07"),
      cex = 1,
      col = "black",
      font = 2)
 
-text(x = 850, y = 0.6, 
-     labels = expression("1x dose: 263 g ai ha" ^-1),
-     cex = 1,
+text(x = 650, y = 0.5, 
+     labels = expression("1x rate: 280 g ai ha" ^-1),
+     cex = 1.1,
      col = "black",
      font = 2)
 
@@ -177,8 +178,8 @@ text(x = 850, y = 0.6,
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD Projects/Giant Ragweed/Dose Response/Fomesafen/Dose-response curve.tiff",
-width = 8, height = 6, units = "in", res = 1000, compression = "lzw")
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-108/DR Curve.tiff",
+     width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 par(mar = c(5,5,1,1))
 
@@ -188,31 +189,32 @@ plot(model.LL3,
      ylab = expression(paste("Dry aboveground biomass (g plant"^-1, ")")),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1,
-     cex.axis = 1.2,
+     cex = 1.2,
+     cex.axis = 1,
      cex.lab = 1.5,
-     cex.legend = 1.2,
+     cex.legend = 1.4,
+     legendPos = c(1450, 3.8),
      lwd = 1)
 
-abline(v = 263, 
+abline(v = 280, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
-text(x = 1400, y = 1.5, 
-     labels = expression(paste("ED"[50] ~ "RI = 29.26 ("%+-% "6.63)")),
-     cex = 1.1,
+text(x = 650, y = 1.2, 
+     labels = expression(paste("ED"[50] ~ "Ratio = 1.4 ("%+-% "0.2)")),
+     cex = 1,
      col = "black",
      font = 2)
 
-text(x = 1050, y = 1.35, 
-     labels = expression("p-value = < 0.0001"),
-     cex = 1.1,
+text(x = 480, y = 1.1, 
+     labels = expression("p-value = 0.07"),
+     cex = 1,
      col = "black",
      font = 2)
 
-text(x = 950, y = 0.6, 
-     labels = expression("1x dose: 263 g ai ha" ^-1),
+text(x = 650, y = 0.5, 
+     labels = expression("1x rate: 280 g ai ha" ^-1),
      cex = 1.1,
      col = "black",
      font = 2)
