--- a/PhD/Exacto/2022-108/2022_108_DR_VR7DAT.Rmd
+++ b/PhD/Exacto/2022-108/2022_108_DR_VR7DAT.Rmd
@@ -79,18 +79,13 @@ getMeanFunctions(4)
 mselect(model.LL4,  list(L.3(),  L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL2.3(), LL2.3u(), LL.4(), LL2.4(), LL.5(), W1.3(), W1.4(), W2.4(), baro5()),
         linreg = T) 
 
-#LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
+#LL.3 better option here (lower IC, which actually is AIC (default)). L.3 (logistic three parameter) could also be used, but since it is a asymmetrical model, I would give preference to LL.3. Moreover, there is no difference between for dose–response data, the logistic model offers no advantage over the log-logistic model (Ritz 2009). Additionally, in symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
 
 model.LL3<- drm(vr_7dat ~ rate, name, fct = LL.3(),  data = data, type = "continuous")
 
 model.L.3<- drm(vr_7dat ~ rate, name, fct = L.3(),  data = data, type = "continuous")
-
-model.LL.3u<- drm(vr_7dat ~ rate, name, fct = LL.3u(),  data = data, type = "continuous")
-
-
-
 
 
 modelFit(model.LL3)
@@ -101,7 +96,6 @@ modelFit(model.L.3)
 summary(model.LL3) # NO parameter c (lower limit). It means lower limit was set to zero.
 
 summary(model.L.3)
-
 
 
 
@@ -116,6 +110,7 @@ anova(model.LL4, model.L.3) # p-value > 0.05 means that there is no difference b
 ```{r}
 
 ED(model.LL3, c(50, 90), type = "relative") 
+
 
 # Estimated doses required for ED50, and ED90. Estimation of ED90 is statistically less accurate and often subject to high variance. Therefore, is better to use ED50.
 
@@ -155,38 +150,20 @@ par(mar = c(5,5,1,1))
 plot(model.LL3,
      type = "average",
      xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Dry aboveground biomass (g plant"^-1, ")")),
+     ylab = expression(paste("Control 7 DAT (%)")),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.2,
      cex.axis = 1,
      cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(1450, 3.8),
+     #cex.legend = 1.4,
+     #legendPos = c(1450, 85),
      lwd = 1)
 
 abline(v = 280, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
-
-text(x = 650, y = 1.2, 
-     labels = expression(paste("ED"[50] ~ "Ratio = 1.4 ("%+-% "0.2)")),
-     cex = 1,
-     col = "black",
-     font = 2)
-
-text(x = 480, y = 1.1, 
-     labels = expression("p-value = 0.07"),
-     cex = 1,
-     col = "black",
-     font = 2)
-
-text(x = 650, y = 0.5, 
-     labels = expression("1x rate: 280 g ai ha" ^-1),
-     cex = 1.1,
-     col = "black",
-     font = 2)
 
 ```
 
@@ -196,7 +173,7 @@ text(x = 650, y = 0.5,
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-108/DR_biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-108/DR_vr7DAT.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 par(mar = c(5,5,1,1))
@@ -204,14 +181,14 @@ par(mar = c(5,5,1,1))
 plot(model.LL3,
      type = "average",
      xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Dry aboveground biomass (g plant"^-1, ")")),
+     ylab = expression(paste("Control 7 DAT (%)")),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.2,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.4,
-     legendPos = c(1450, 3.8),
+     legendPos = c(1450, 85),
      lwd = 1)
 
 abline(v = 280, 
@@ -219,14 +196,14 @@ abline(v = 280,
        lty = "twodash",
        col = "black")
 
-text(x = 650, y = 1.2, 
-     labels = expression(paste("ED"[50] ~ "Ratio = 1.4 ("%+-% "0.2)")),
+text(x = 650, y = 60, 
+     labels = expression(paste("ED"[50] ~ "Ratio = 1.2 ("%+-% "0.2)")),
      cex = 1,
      col = "black",
      font = 2)
 
-text(x = 480, y = 1.1, 
-     labels = expression("p-value = 0.07"),
+text(x = 480, y = 55, 
+     labels = expression("p-value > 0.1"),
      cex = 1,
      col = "black",
      font = 2)
