--- a/PhD/Exacto/2022-107/redrood_vr_7DAT.Rmd
+++ b/PhD/Exacto/2022-107/redrood_vr_7DAT.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exacto 2022-107_Redroot Biored"
+title: "Exacto 2022-107_Redroot VR-7DAT"
 author: "Felipe Faleco"
 date: "2022-09-09"
 output: html_document
@@ -42,7 +42,7 @@ str(data)
 
 ```{r}
 
-model <- glmmTMB(bio_red ~ trt, data = data, family = beta_family())
+model <- glmmTMB(vr_7dat ~ trt, data = data, family = beta_family())
 
 ```
 
@@ -95,18 +95,18 @@ CLD_emm_trt
 
 plot(emm_trt, adjust = "tukey", comparisons = F, alpha = 0.05,  horizontal = T) + 
   geom_point(size = 2) +
-  geom_text(aes(label = c("d", "c", "e", "cd", "b", "ab", "a", "ab", "ab", "ab")),
+  geom_text(aes(label = c("e", "cd", "f", "d", "bc", "b", "a", "a", "a", "a")),
             vjust = -0.8, size = 4) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(#title = "Waterhemp Biomass Reduction - POST", 
-       x = "Biomass Reduction (%)", 
+       x = "Control 7 DAT (%)", 
        y = "Treatment") +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
          axis.text= element_text(face = "bold", size = 14, colour = "black"))
 
-  ggsave("ANOVA_redroot_biomass.tiff", units="in", width = 10, height = 8, dpi = 600, compression = "lzw")
+  ggsave("ANOVA_redroot_vr_7DAT.tiff", units="in", width = 10, height = 8, dpi = 600, compression = "lzw")
 
 ```
