--- a/PhD/Exacto/2022-107/Redroot/redrood_biored.Rmd
+++ b/PhD/Exacto/2022-107/Redroot/redrood_biored.Rmd
@@ -100,7 +100,7 @@ plot(emm_trt, adjust = "tukey", comparisons = F, alpha = 0.05,  horizontal = T) 
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(#title = "Waterhemp Biomass Reduction - POST", 
-       x = "Biomass Reduction (%)", 
+       x = "Biomass Reduction 28 DAT (%)", 
        y = "Treatment") +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
