--- a/PhD/Exacto/2022-107/Sorghum/sorghum_vr_21DAT.Rmd
+++ b/PhD/Exacto/2022-107/Sorghum/sorghum_vr_21DAT.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exacto 2022-107_Redroot VR-21DAT"
+title: "Exacto 2022-107_Sorghum VR-21DAT"
 author: "Felipe Faleco"
 date: "2022-09-09"
 output: html_document
@@ -23,7 +23,7 @@ library(ggplot2)
 
 ```{r}
 
-data <- read.csv("data_redroot_reduction.csv")
+data <- read.csv("data_sorghum_reduction.csv")
 
 str(data)
 
@@ -95,7 +95,7 @@ CLD_emm_trt
 
 plot(emm_trt, adjust = "tukey", comparisons = F, alpha = 0.05,  horizontal = T) + 
   geom_point(size = 2) +
-  geom_text(aes(label = c("c", "b", "c", "b", "a", "a", "a", "a", "a", "a")),
+  geom_text(aes(label = c("e", "d", "f", "de", "bc", "ab", "a", "ab", "cd", "ab")),
             vjust = -0.8, size = 4) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
@@ -107,6 +107,6 @@ plot(emm_trt, adjust = "tukey", comparisons = F, alpha = 0.05,  horizontal = T) 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
          axis.text= element_text(face = "bold", size = 14, colour = "black"))
 
-  ggsave("ANOVA_redroot_vr_21DAT.tiff", units="in", width = 10, height = 8, dpi = 600, compression = "lzw")
+  ggsave("ANOVA_sorghum_vr_21DAT.tiff", units="in", width = 10, height = 8, dpi = 600, compression = "lzw")
 
 ```
