--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
@@ -29,6 +29,8 @@ library(dplyr)
 library(choroplethr)
 
 
+
+
 states <- map_data("state")
 df <- subset(states, region =="wisconsin")
 
@@ -149,24 +151,25 @@ base +
                    seed = TRUE,
                    show.legend = FALSE) +  
   north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
-  scale_color_manual(name = "Putative-Resistance", values = c("black", "blue", "cyan4", "orange2","red", "darkorchid3")) +
+  scale_color_manual(name = "Herbicide Resistance 1x Rate POST", 
+                     values = c("darkgreen", "blue", "black", "orange2","cyan4", "darkorchid3", "red", "firebrick")) +
   theme_map() +
-  labs(fill="", y = "Latitude", x = "Longitude", title = "Waterhemp Putative-Resistance in WI - 1x POST") +
+  labs(fill="", y = "Latitude", x = "Longitude") + 
+     #title = "Waterhemp Response to POST Herbicides") +
   theme(axis.text=element_blank(), 
         axis.title=element_blank(), 
         panel.background = element_rect(fill="white", color = "black"), 
         panel.grid.major = element_line(color = "white"), 
         panel.grid.minor = element_blank(),
         panel.border = element_rect(fill = NA,color = "white", size = 0.5, linetype = "solid"),
-        legend.title = element_text(size = 16, colour = "black", face = "bold", hjust = 0),
-        legend.text = element_text(size = 16, colour = "black"), 
+        legend.title = element_text(size = 18, colour = "black", face = "bold", hjust = 0),
+        legend.text = element_text(size = 15, colour = "black"), 
         legend.key = element_rect(fill = NA),
         legend.key.width = unit(0.5, "line"),
-        legend.position = c(0.6, 0.8), 
+        legend.position = c(0.65, 0.78), 
         legend.background = element_rect(fill =NA), 
-        plot.title = element_text(color = "darkgreen", face = "bold", size = 22, hjust = 0.5)) +
-  ggsave("MAP_POPALLHERBS_1X.jpeg", units = "in", width = 10, height = 10, dpi = 600)
-
+        plot.title = element_text(color = "darkgreen", face = "bold", size = 30, hjust = 0.5)) +
+  ggsave("MAP_POP_ALLHERBS_1X.tiff", units = "in", width = 13, height = 11, dpi = 600, compression = "lzw")
 
 
 ```
