--- a/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_sulf_DR_biomass.Rmd
+++ b/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_sulf_DR_biomass.Rmd
@@ -130,98 +130,68 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 
 
-# PLOT
-
-```{r}
-
-par(mar = c(5,5,1,1))
-
-plot(model.LL3,
-     type = "average",
-     xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Dry aboveground biomass (g plant"^-1, ")")),
-     col = c("red", "darkgreen"),
-     pch = c(19, 17),
-     cex = 1.2,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(1450, 3.8),
-     lwd = 1)
-
-abline(v = 280, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
-
-text(x = 650, y = 1.2, 
-     labels = expression(paste("ED"[50] ~ "Ratio = 1.4 ("%+-% "0.2)")),
-     cex = 1,
-     col = "black",
-     font = 2)
-
-text(x = 480, y = 1.1, 
-     labels = expression("p-value = 0.07"),
-     cex = 1,
-     col = "black",
-     font = 2)
-
-text(x = 650, y = 0.5, 
-     labels = expression("1x rate: 280 g ai ha" ^-1),
-     cex = 1.1,
-     col = "black",
-     font = 2)
-
-```
-
-
-
 #SAVE TIFF
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-108/DR_biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/Sulf_DR_biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
+
 
 par(mar = c(5,5,1,1))
 
+
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Dry aboveground biomass (g plant"^-1, ")")),
+     xlab = expression(paste("Sulfentrazone dose (g ai ha"^-1, ")")),
+     ylab = expression(paste("Plant Density (plant EU"^-1, ")")),
+     ylim = c(0, 8),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1.2,
+     cex = 1.3,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.4,
-     legendPos = c(1450, 3.8),
+     legendPos = c(700, 6),
      lwd = 1)
+
 
 abline(v = 280, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
-text(x = 650, y = 1.2, 
-     labels = expression(paste("ED"[50] ~ "Ratio = 1.4 ("%+-% "0.2)")),
-     cex = 1,
+
+text(x = 680, y = 3.0, 
+     labels = expression(paste("ED"[50] ~ "BS = 87.6 ("%+-% "18.1)")),
+     cex = 1.3,
      col = "black",
      font = 2)
 
-text(x = 480, y = 1.1, 
-     labels = expression("p-value = 0.07"),
-     cex = 1,
+
+text(x = 700, y = 2.6, 
+     labels = expression(paste("ED"[50] ~ "A66 = 32.8 ("%+-% "11.3)")),
+     cex = 1.3,
      col = "black",
      font = 2)
 
-text(x = 650, y = 0.5, 
+
+text(x = 500, y = 2.2, 
+     labels = expression("p-value = 0.01"),
+     cex = 1.3,
+     col = "black",
+     font = 2)
+
+
+text(x = 580, y = 1.2, 
      labels = expression("1x rate: 280 g ai ha" ^-1),
-     cex = 1.1,
+     cex = 1.2,
      col = "black",
      font = 2)
+
 
 dev.off()
+
 
 ```
 
