--- a/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_fome_DR_counts.Rmd
+++ b/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_fome_DR_counts.Rmd
@@ -50,13 +50,13 @@ summary.A66 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data,
 
 ```{r}
 
-model.LL4<- drm(count~ rate, pop, fct = LL.4(), data = data, type = "continuous")
+model.W1.3<- drm(count~ rate, pop, fct = W1.3(), data = data, type = "continuous")
 
 
                 
-modelFit(model.LL4) # higher the p-value, better.
+modelFit(model.W1.3) # higher the p-value, better.
 
-summary(model.LL4) 
+summary(model.W1.3) 
 
 # c: lower limit (models with negative lower limit are biologically impossible. E.g., negative biomass, negative % biomass reduction, or negative % control)
 
@@ -74,22 +74,22 @@ summary(model.LL4)
 
 ```{r, warning=FALSE}
 
-mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1.4(), W2.4(), baro5()), linreg = T) 
+mselect(model.W1.3,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.4(), LL.5(), W1.3(), W1.4(), W2.4(), baro5()), linreg = T) 
 
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
 
-model.LL3<- drm(count ~ rate, pop, fct = LL.3(),  data = data, type = "continuous")
+#model.LL3<- drm(count ~ rate, pop, fct = LL.3(),  data = data, type = "continuous")
 
 
 
-modelFit(model.LL3)
+#modelFit(model.LL3)
 
-summary(model.LL3) # NO parameter c (lower limit). It means lower limit was set to zero.
+#summary(model.LL3) # NO parameter c (lower limit). It means lower limit was set to zero.
 
 
-anova(model.LL3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+#anova(model.LL3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -99,7 +99,8 @@ anova(model.LL3, model.LL4) # p-value > 0.05 means that there is no difference b
 
 ```{r}
 
-ED(model.LL3, c(50, 90), type = "relative") 
+ED(model.W1.3, c(50, 90), type = "relative") 
+
 
 # Estimated doses required for ED50, and ED90. Estimation of ED90 is statistically less accurate and often subject to high variance. Therefore, is better to use ED50.
 
@@ -110,20 +111,20 @@ ED(model.LL3, c(50, 90), type = "relative")
 
 ```{r}
 
-EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
+EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
 
-EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
+EDcomp(model.W1.3, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
 
 
 # Comparing b parameter (slope)
-compParm(model.LL3, strVal = "b", operator = "-")
+compParm(model.W1.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL3, strVal = "d", operator = "-")
+compParm(model.W1.3, strVal = "d", operator = "-")
 
 # Comparing e parameter (ED50)
-compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
+compParm(model.W1.3, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
 
 
 ```
@@ -134,57 +135,57 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/Sulf_DR_counts.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/Fome_DR_counts.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.LL3,
+plot(model.W1.3,
      type = "average",
-     xlab = expression(paste("Sulfentrazone dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
      ylab = expression(paste("Plant Density (plant EU"^-1, ")")),
-     ylim = c(0, 8),
+     ylim = c(0, 15),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.3,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.4,
-     legendPos = c(700, 6),
+     legendPos = c(680, 11),
      lwd = 1)
 
 
-abline(v = 280, 
+abline(v = 263, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
 
-text(x = 680, y = 3.0, 
-     labels = expression(paste("ED"[50] ~ "BS = 87.6 ("%+-% "18.1)")),
+text(x = 650, y = 6.0, 
+     labels = expression(paste("ED"[50] ~ "BS = 148.9 ("%+-% "38.3)")),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 700, y = 2.6, 
-     labels = expression(paste("ED"[50] ~ "A66 = 32.8 ("%+-% "11.3)")),
+text(x = 645, y = 5.2, 
+     labels = expression(paste("ED"[50] ~ "A66 = 16.4 ("%+-% "31.8)")),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 500, y = 2.2, 
-     labels = expression("p-value = 0.01"),
+text(x = 460, y = 4.4, 
+     labels = expression("p-value < 0.01"),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 580, y = 1.2, 
-     labels = expression("1x rate: 280 g ai ha" ^-1),
+text(x = 520, y = 3, 
+     labels = expression("1x rate: 263 g ai ha" ^-1),
      cex = 1.2,
      col = "black",
      font = 2)
