--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_A82.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_A82.Rmd
@@ -24,7 +24,7 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_Meso_GH_Brook.csv")
+data <- read.csv("Data Sheet_Meso_GH_A82.csv")
 
 str(data)
 
@@ -130,18 +130,15 @@ compParm(model.LL3, strVal = "d", operator = "-")
 compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
 
 
-compParm(model.LL3, strVal = "e", operator = "-") 
-
-
 ```
 
 
 
 #SAVE TIFF
 
-```{r}
+#```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/Meso_Brook_DR_biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/Sulf_DR_counts.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -150,57 +147,49 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Brook Biomass (g plant"^-1, ")")),
-     ylim = c(0, 4),
-     col = c("darkgreen", "red", "navy"),
-     pch = c(19, 17, 15),
-     cex = 1.1,
+     xlab = expression(paste("Sulfentrazone dose (g ai ha"^-1, ")")),
+     ylab = expression(paste("Plant Density (plant EU"^-1, ")")),
+     ylim = c(0, 8),
+     col = c("red", "darkgreen"),
+     pch = c(19, 17),
+     cex = 1.3,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.4,
-     legendPos = c(1400, 3.5),
+     legendPos = c(700, 6),
      lwd = 1)
 
 
-
-abline(v = 105.1, 
+abline(v = 280, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
 
-text(x = 350, y = 1.5, 
-     labels = expression(paste("ED"[50] ~ "meso = 11.4 ("%+-% "2.5)")),
-     cex = 1.0,
+text(x = 680, y = 3.0, 
+     labels = expression(paste("ED"[50] ~ "BS = 87.6 ("%+-% "18.1)")),
+     cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 440, y = 1.3, 
-     labels = expression(paste("ED"[50] ~ "meso+P450 = 5.8 ("%+-% "1.5)")),
-     cex = 1.0,
+text(x = 700, y = 2.6, 
+     labels = expression(paste("ED"[50] ~ "A66 = 32.8 ("%+-% "11.3)")),
+     cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 450, y = 1.1, 
-     labels = expression(paste("ED"[50] ~ "meso+GST = 4.8 ("%+-% "1.2)*")),
-     cex = 1.0,
+text(x = 500, y = 2.2, 
+     labels = expression("p-value = 0.01"),
+     cex = 1.3,
      col = "black",
      font = 2)
 
 
-#text(x = 500, y = 2.2, 
-     #labels = expression("p-value = 0.01"),
-     #cex = 1.3,
-     #col = "black",
-     #font = 2)
-
-
-text(x = 320, y = 0.4, 
-     labels = expression("1x rate: 105.1 g ai ha" ^-1),
-     cex = 1.0,
+text(x = 580, y = 1.2, 
+     labels = expression("1x rate: 280 g ai ha" ^-1),
+     cex = 1.2,
      col = "black",
      font = 2)
 
