--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_Brook.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_Brook.Rmd
@@ -158,8 +158,8 @@ plot(model.LL3,
      cex = 1.1,
      cex.axis = 1,
      cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(1400, 3.5),
+     cex.legend = 1.2,
+     legendPos = c(1100, 3.5),
      lwd = 1)
 
 
@@ -177,15 +177,15 @@ text(x = 350, y = 1.5,
      font = 2)
 
 
-text(x = 440, y = 1.3, 
-     labels = expression(paste("ED"[50] ~ "meso+P450 = 5.8 ("%+-% "1.5)")),
+text(x = 460, y = 1.3, 
+     labels = expression(paste("ED"[50] ~ "meso+P450 = 5.8 ("%+-% "1.5)*")),
      cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 450, y = 1.1, 
-     labels = expression(paste("ED"[50] ~ "meso+GST = 4.8 ("%+-% "1.2)*")),
+text(x = 460, y = 1.1, 
+     labels = expression(paste("ED"[50] ~ "meso+GST = 4.8 ("%+-% "1.2)**")),
      cex = 1.0,
      col = "black",
      font = 2)
