--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_A20.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_A20.Rmd
@@ -24,9 +24,12 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_Meso_GH_A20.csv")
+data <- read.csv("Data Sheet_Meso_GH.csv")
 
 str(data)
+
+
+data_A20 <- data %>% filter(pop == "A20")
 
 
 
@@ -34,15 +37,15 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.meso <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data, herb=="meso"),
+summary.meso <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A20, herb=="meso"),
           FUN=fun)
 
 
-summary.meso_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data, herb=="meso+GST"),
+summary.meso_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A20, herb=="meso+GST"),
           FUN=fun)
 
 
-summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data, herb=="meso+P450"),
+summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A20, herb=="meso+P450"),
           FUN=fun)
 
 
@@ -54,7 +57,7 @@ summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data,
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, herb, fct = LL.4(), data = data, type = "continuous")
+model.LL4<- drm(biomass ~ rate, herb, fct = LL.4(), data = data_A20, type = "continuous")
 
 
                 
@@ -83,7 +86,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, herb, fct = LL.3(),  data = data, type = "continuous")
+model.LL3<- drm(biomass ~ rate, herb, fct = LL.3(),  data = data_A20, type = "continuous")
 
 
 
