--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_Brook.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_Brook.Rmd
@@ -20,13 +20,16 @@ library(dplyr)
 ```
 
 
-# READ DATA
+## READ DATA
 
 ```{r}
 
-data <- read.csv("Data Sheet_Meso_GH_Brook.csv")
+data <- read.csv("Data Sheet_Meso_GH.csv")
 
 str(data)
+
+
+data_Brook <- data %>% filter(pop == "Brook")
 
 
 
@@ -34,15 +37,15 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.meso <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data, herb=="meso"),
+summary.meso <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_Brook, herb=="meso"),
           FUN=fun)
 
 
-summary.meso_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data, herb=="meso+GST"),
+summary.meso_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_Brook, herb=="meso+GST"),
           FUN=fun)
 
 
-summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data, herb=="meso+P450"),
+summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_Brook, herb=="meso+P450"),
           FUN=fun)
 
 
@@ -50,11 +53,11 @@ summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data,
 
 
 
-# MODEL LL.4
+## MODEL LL.4
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, herb, fct = LL.4(), data = data, type = "continuous")
+model.LL4<- drm(biomass ~ rate, herb, fct = LL.4(), data = data_Brook, type = "continuous")
 
 
                 
@@ -74,7 +77,7 @@ summary(model.LL4)
 
 
 
-# MODEL SELECTION
+## MODEL SELECTION
 
 ```{r, warning=FALSE}
 
@@ -83,7 +86,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, herb, fct = LL.3(),  data = data, type = "continuous")
+model.LL3<- drm(biomass ~ rate, herb, fct = LL.3(),  data = data_Brook, type = "continuous")
 
 
 modelFit(model.LL3)
@@ -98,7 +101,7 @@ anova(model.LL3, model.LL4) # p-value > 0.05 means that there is no difference b
 
 
 
-# ED50 AND ED 90
+## ED50 AND ED 90
 
 ```{r}
 
@@ -110,7 +113,7 @@ ED(model.LL3, c(50, 90), type = "relative")
 ```
 
 
-# ED 50 RI AND PARAMETERS STUDENT T-TEST COMPARISONS
+## ED 50 RI AND PARAMETERS STUDENT T-TEST COMPARISONS
 
 ```{r}
 
@@ -130,14 +133,11 @@ compParm(model.LL3, strVal = "d", operator = "-")
 compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
 
 
-compParm(model.LL3, strVal = "e", operator = "-") 
-
-
 ```
 
 
 
-#SAVE TIFF
+##SAVE TIFF
 
 ```{r}
 
