--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH.Rmd
@@ -20,7 +20,10 @@ library(dplyr)
 ```
 
 
-# READ DATA
+# CONFIRMING RESISTANCE
+
+
+## READ DATA
 
 ```{r}
 
@@ -29,7 +32,7 @@ data <- read.csv("Data Sheet_Meso_GH.csv")
 str(data)
 
 
-data_A75 <- data %>% filter(pop == "A75")
+data_meso <- data %>% filter(herb == "meso")
 
 
 
@@ -37,15 +40,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.meso <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A75, herb=="meso"),
-          FUN=fun)
-
-
-summary.meso_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A75, herb=="meso+GST"),
-          FUN=fun)
-
-
-summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A75, herb=="meso+P450"),
+summary.meso <- summaryBy(cbind(biomass) ~ pop + rate, data = subset(data_meso),
           FUN=fun)
 
 
@@ -53,11 +48,11 @@ summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_
 
 
 
-# MODEL LL.4
+## MODEL LL.4
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, herb, fct = LL.4(), data = data_A75, type = "continuous")
+model.LL4<- drm(biomass ~ rate, pop, fct = LL.4(), data = data_meso, type = "continuous")
 
 
                 
@@ -77,7 +72,7 @@ summary(model.LL4)
 
 
 
-# MODEL SELECTION
+## MODEL SELECTION
 
 ```{r, warning=FALSE}
 
@@ -86,7 +81,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, herb, fct = LL.3(),  data = data_A75, type = "continuous")
+model.LL3<- drm(biomass ~ rate, pop, fct = LL.3(),  data = data_meso, type = "continuous")
 
 
 modelFit(model.LL3)
@@ -101,7 +96,7 @@ anova(model.LL3, model.LL4) # p-value > 0.05 means that there is no difference b
 
 
 
-# ED50 AND ED 90
+## ED50 AND ED 90
 
 ```{r}
 
@@ -113,7 +108,7 @@ ED(model.LL3, c(50, 90), type = "relative")
 ```
 
 
-# ED 50 RI AND PARAMETERS STUDENT T-TEST COMPARISONS
+## ED 50 RI AND PARAMETERS STUDENT T-TEST COMPARISONS
 
 ```{r}
 
@@ -137,11 +132,11 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 
 
-#SAVE TIFF
+##SAVE TIFF
 
 #```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/Sulf_DR_counts.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/Meso_Brook_DR_biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -150,49 +145,57 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Sulfentrazone dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Plant Density (plant EU"^-1, ")")),
-     ylim = c(0, 8),
-     col = c("red", "darkgreen"),
-     pch = c(19, 17),
-     cex = 1.3,
+     xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
+     ylab = expression(paste("Brook Biomass (g plant"^-1, ")")),
+     ylim = c(0, 4),
+     col = c("darkgreen", "red", "navy"),
+     pch = c(19, 17, 15),
+     cex = 1.1,
      cex.axis = 1,
      cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(700, 6),
+     cex.legend = 1.2,
+     legendPos = c(1100, 3.5),
      lwd = 1)
 
 
-abline(v = 280, 
+
+abline(v = 105.1, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
 
-text(x = 680, y = 3.0, 
-     labels = expression(paste("ED"[50] ~ "BS = 87.6 ("%+-% "18.1)")),
-     cex = 1.3,
+text(x = 350, y = 1.5, 
+     labels = expression(paste("ED"[50] ~ "meso = 11.4 ("%+-% "2.5)")),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 700, y = 2.6, 
-     labels = expression(paste("ED"[50] ~ "A66 = 32.8 ("%+-% "11.3)")),
-     cex = 1.3,
+text(x = 460, y = 1.3, 
+     labels = expression(paste("ED"[50] ~ "meso+P450 = 5.8 ("%+-% "1.5)*")),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 500, y = 2.2, 
-     labels = expression("p-value = 0.01"),
-     cex = 1.3,
+text(x = 460, y = 1.1, 
+     labels = expression(paste("ED"[50] ~ "meso+GST = 4.8 ("%+-% "1.2)**")),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 580, y = 1.2, 
-     labels = expression("1x rate: 280 g ai ha" ^-1),
-     cex = 1.2,
+#text(x = 500, y = 2.2, 
+     #labels = expression("p-value = 0.01"),
+     #cex = 1.3,
+     #col = "black",
+     #font = 2)
+
+
+text(x = 320, y = 0.4, 
+     labels = expression("1x rate: 105.1 g ai ha" ^-1),
+     cex = 1.0,
      col = "black",
      font = 2)
 
@@ -201,9 +204,5 @@ dev.off()
 
 
 ```
-
-
-
-
 
 
