--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _Brook.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _Brook.Rmd
@@ -20,7 +20,7 @@ library(dplyr)
 ```
 
 
-# COMPARING ONLY MESOTRIONE AT HIGH/LOW
+# COMPARING ONLY HERBICIDE AT HIGH/LOW
 
 ## READ DATA
 
@@ -201,7 +201,7 @@ dev.off()
 
 
 
-# COMPARING MESOTRIONE+MI AT HIGH/LOW
+# COMPARING HERBICIDE+MI AT HIGH/LOW
 
 ## READ DATA
 
