--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A82.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A82.Rmd
@@ -20,7 +20,7 @@ library(dplyr)
 ```
 
 
-# AT HIGH TEMP
+# COMPARING ONLY HERBICIDE AT HIGH/LOW
 
 ## READ DATA
 
@@ -31,7 +31,7 @@ data <- read.csv("Data Sheet_Meso_GC.csv")
 str(data)
 
 
-data_A82_high <- data %>% filter(pop == "A82", temp == "H")
+data_A82_meso <- data %>% filter(pop == "A82", herb == "meso")
 
 
 
@@ -39,7 +39,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.A82_high <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_A82_high),
+summary.A82_meso <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_A82_meso),
           FUN=fun)
 
 
@@ -51,7 +51,7 @@ summary.A82_high <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = 
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, herb, fct = LL.4(), data = data_A82_high, type = "continuous")
+model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_A82_meso, type = "continuous")
 
 
                 
@@ -80,7 +80,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, herb, fct = LL.3(),  data = data_A82_high, type = "continuous")
+model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_A82_meso, type = "continuous")
 
 
 
@@ -112,9 +112,9 @@ ED(model.LL3, c(50, 90), type = "relative")
 
 ```{r}
 
-EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = T)
+EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
-EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = T)
+EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = F)
 
 
 # Comparing b parameter (slope)
@@ -134,10 +134,10 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ##SAVE TIFF
 
-#```{r}
+```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Meso_High_DR_biomass.tiff",
-     width = 10, height = 8, units = "in", res = 600, compression = "lzw")
+#tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Meso_High_DR_biomass.tiff",
+     #width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
@@ -201,7 +201,7 @@ dev.off()
 
 
 
-# AT LOW TEMP
+# COMPARING HERBICIDE+MI AT HIGH/LOW
 
 ## READ DATA
 
@@ -212,7 +212,7 @@ data <- read.csv("Data Sheet_Meso_GC.csv")
 str(data)
 
 
-data_A82_low <- data %>% filter(pop == "A82", temp == "L")
+data_A82_meso_P450 <- data %>% filter(pop == "A82", herb == "meso+P450")
 
 
 
@@ -220,7 +220,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.A82_low <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_A82_low),
+summary.A82_meso_P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_A82_meso_P450),
           FUN=fun)
 
 
@@ -232,7 +232,7 @@ summary.A82_low <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = s
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, herb, fct = LL.4(), data = data_A82_low, type = "continuous")
+model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_A82_meso_P450, type = "continuous")
 
 
                 
@@ -261,7 +261,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, herb, fct = LL.3(),  data = data_A82_low, type = "continuous")
+model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_A82_meso_P450, type = "continuous")
 
 
 
@@ -293,9 +293,9 @@ ED(model.LL3, c(50, 90), type = "relative")
 
 ```{r}
 
-EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = F)
+EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = T)
 
-EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = F)
+EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
@@ -315,10 +315,10 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ##SAVE TIFF
 
-#```{r}
+```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Meso_Brook_Low_DR_biomass.tiff",
-     width = 10, height = 8, units = "in", res = 600, compression = "lzw")
+#tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Brook_Meso_P450_DR_biomass.tiff",
+     #width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
@@ -326,16 +326,16 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("Mesotrione+P450-inhibitor dose (g ai ha"^-1, ")")),
      ylab = expression(paste("Brook biomass (g plant"^-1, ")")),
-     ylim = c(0, 4.0),
+     ylim = c(0, 4.5),
      col = c("darkgreen", "red"),
      pch = c(19, 17),
      cex = 1.1,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.3,
-     legendPos = c(550, 3.5),
+     legendPos = c(400, 3.5),
      lwd = 1)
 
 
@@ -346,28 +346,28 @@ abline(v = 105.1,
        col = "black")
 
 
-text(x = 265, y = 2.0, 
-     labels = expression(paste("ED"[50] ~ "meso = 10.6 ("%+-% "1.7)")),
-     cex = 1.1,
+text(x = 320, y = 2.2, 
+     labels = expression(paste("ED"[50] ~ "elevated = 18.7 ("%+-% "1.5)")),
+     cex = 1.2,
      col = "black",
      font = 2)
 
 
-text(x = 330, y = 1.8, 
-     labels = expression(paste("ED"[50] ~ "meso+P450 = 0.03 ("%+-% "0.1)")),
-     cex = 1.1,
+text(x = 310, y = 2.0, 
+     labels = expression(paste("ED"[50] ~ "ambient = 0.03 ("%+-% "0.1)")),
+     cex = 1.2,
      col = "black",
      font = 2)
 
 
-text(x = 200, y = 1.6, 
+text(x = 210, y = 1.8, 
      labels = expression("p-value < 0.0001"),
-     cex = 1.1,
+     cex = 1.2,
      col = "black",
      font = 2)
 
 
-text(x = 250, y = 0.5, 
+text(x = 250, y = 0.7, 
      labels = expression("1x rate: 105.1 g ai ha" ^-1),
      cex = 1.1,
      col = "black",
@@ -378,5 +378,6 @@ dev.off()
 
 
 ```
+
 
 
