--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH.Rmd
@@ -148,8 +148,8 @@ plot(model.LL3,
      xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
      ylab = expression(paste("Biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
-     col = c("darkgreen", "red", "navy"),
-     pch = c(19, 17, 15),
+     col = c("darkgreen", "red", "navy", "orange"),
+     pch = c(19, 17, 15, 18),
      cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
