--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/MIs_2,4-D_GH.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/MIs_2,4-D_GH.Rmd
@@ -134,9 +134,9 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ##SAVE TIFF
 
-#```{r}
+```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/Meso_Brook_DR_biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/GH_2,4D Only_All Pops_DR biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -145,56 +145,70 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Brook Biomass (g plant"^-1, ")")),
+     xlab = expression(paste("2,4-D dose (g ai ha"^-1, ")")),
+     ylab = expression(paste("Biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
-     col = c("darkgreen", "red", "navy"),
-     pch = c(19, 17, 15),
-     cex = 1.1,
+     col = c("darkgreen", "red", "navy", "orange"),
+     pch = c(19, 17, 15, 18),
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.2,
-     legendPos = c(1100, 3.5),
+     legendPos = c(4800, 3.5),
      lwd = 1)
 
 
 
-abline(v = 105.1, 
+points(x = c(summary(model.LL3)$coefficients[9, 1], 
+             summary(model.LL3)$coefficients[10, 1],
+             summary(model.LL3)$coefficients[11, 1],
+             summary(model.LL3)$coefficients[12, 1]),
+       y = c((summary(model.LL3)$coefficients[5, 1]/2), 
+             (summary(model.LL3)$coefficients[6, 1]/2),
+             (summary(model.LL3)$coefficients[7, 1]/2),
+             (summary(model.LL3)$coefficients[8, 1]/2)),
+       pch = 8,
+       cex = 1.3)
+
+
+
+abline(v = 1065, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
 
-text(x = 350, y = 1.5, 
-     labels = expression(paste("ED"[50] ~ "meso = 11.4 ("%+-% "2.5)")),
+
+text(x = 4500, y = 2.0, 
+     labels = expression(paste("ED"[50] ~ "A101 = 297.6 ("%+-% "61.7)" ^A)),
      cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 460, y = 1.3, 
-     labels = expression(paste("ED"[50] ~ "meso+P450 = 5.8 ("%+-% "1.5)*")),
+text(x = 4200, y = 1.8, 
+     labels = expression(paste("ED"[50] ~ "A75 = 111.6 ("%+-% "25.8)" ^B)),
      cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 460, y = 1.1, 
-     labels = expression(paste("ED"[50] ~ "meso+GST = 4.8 ("%+-% "1.2)**")),
+text(x = 4200, y = 1.6, 
+     labels = expression(paste("ED"[50] ~ "A82 = 104.7 ("%+-% "21.5)" ^B)),
      cex = 1.0,
      col = "black",
      font = 2)
 
 
-#text(x = 500, y = 2.2, 
-     #labels = expression("p-value = 0.01"),
-     #cex = 1.3,
-     #col = "black",
-     #font = 2)
+text(x = 4200, y = 1.4, 
+     labels = expression(paste("ED"[50] ~ "A103 = 55.2 ("%+-% "12.3)" ^C)),
+     cex = 1.0,
+     col = "black",
+     font = 2)
 
 
-text(x = 320, y = 0.4, 
-     labels = expression("1x rate: 105.1 g ai ha" ^-1),
+text(x = 3200, y = 0.7, 
+     labels = expression("1x rate: 1065 g ai ha" ^-1),
      cex = 1.0,
      col = "black",
      font = 2)
